// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons|List Column 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <svg
      height={24}
      onClick={[Function]}
      style={
        Object {
          "color": "#000",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M3 4H21C21.55 4 22 4.45 22 5V19C22 19.55 21.55 20 21 20H3C2.45 20 2 19.55 2 19V5C2 4.45 2.45 4 3 4ZM4 18H8V6H4V18ZM14 18H10V6H14V18ZM16 18H20V6H16V18Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`Icons|List Grid 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <svg
      height={24}
      onClick={[Function]}
      style={
        Object {
          "color": "#000",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M3.5 5.5V18.5H20.5V5.5H3.5ZM13.5 7.5V11H10.5V7.5H13.5ZM8.5 7.5H5.5V11H8.5V7.5ZM5.5 16.5V13H8.5V16.5H5.5ZM10.5 13V16.5H13.5V13H10.5ZM18.5 16.5H15.5V13H18.5V16.5ZM15.5 7.5V11H18.5V7.5H15.5Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`Icons|List List 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <svg
      height={24}
      onClick={[Function]}
      style={
        Object {
          "color": "#000",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M3 7H5V9H3V7ZM5 11H3V13H5V11ZM21 11H7V13H21V11ZM3 15H5V17H3V15ZM21 15H7V17H21V15ZM21 7H7V9H21V7Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;
